update openapi to have all the endpoint
