# generateOpenApi.scala
@@ -6,8 +6,12 @@ import java.nio.charset.StandardCharsets
 @main def generateOpenApi(): Unit = {
   val docs: String = OpenAPIDocsInterpreter()
     .toOpenAPI(
-      wishlist.AlbumWishlists.endpointDefininitions ++ album.Albums.endpointDefininitions,
-      "Album Inventory API",
+      wishlist.AlbumWishlists.endpointDefininitions ++
+        album.Albums.endpointDefininitions ++
+        guitargear.guitar.Guitars.endpointDefinitions ++
+        guitargear.amplifier.AmplifierEndpoints.endpointDefinitions ++
+        guitargear.pedal.GuitarPedals.endpointDefinitions,
+      "Personal App API",
       "1.0"
     )
     .toYaml
